Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/AnonymousClass/AnonymousInSuperCallNegTest.out
AnonymousInSuperCallNegTest.java:23:49: compiler.err.cant.ref.before.ctor.called: x
1 error
